@@ -883,3 +883,4 @@
 	 port if ZXCF active.
 20040531 fuse.c,utils.c: load .hdf images into the active IDE interface,
 	 or ZXCF if none active.
+20040601 utils.c: Add handling of LIBSPECTRUM_CLASS_CARTRIDGE_IF2.
